apply fixed width to all columns for alignment, apply flex to col--4 (contact info) for phone # and email to appear as flex column

--- a/src/components/WarehouseRow/WarehouseRow.scss
+++ b/src/components/WarehouseRow/WarehouseRow.scss
@@ -57,12 +57,14 @@ ul {
     }
 
     @include tablet {
+      
       &--1,
       &--2,
       &--3,
       &--4,
       &--5 {
         flex: 1;
+        width: 10%;
       }
     }
 
@@ -111,9 +113,13 @@ ul {
 
     &--2 {
       order: 3;
+      padding-right: 3rem;
+      word-wrap: break-word;
+      hyphens: auto; 
 
       @include tablet {
         order: 2;
+        padding-right: 0;
       }
     }
 
@@ -123,6 +129,12 @@ ul {
 
     &--4 {
       order: 4;
+
+      @include tablet {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      }
     }
 
     &--5 {
